gogs/01-gogs-pv.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gogs
  labels:
    app.kubernetes.io/component: gogs
