gogs/01-gogs-pv_ns_sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gogs
  labels:
    app.kubernetes.io/component: gogs
    app.kubernetes.io/part-of: git
