gogs/03-gogs-ingress_transport.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gogs
  namespace: gogs
  labels:
    app.kubernetes.io/component: gogs
    app.kubernetes.io/part-of: git
  annotations:
    #cert-manager.io/cluster-issuer: "letsencrypt-prd"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - git.jakwifi.id
    secretName: gogs-tls
  rules:
  - host: git.jakwifi.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gogs
            port:
              number: 3000
